--- a/ansible/install_zab_serv.yml
+++ b/ansible/install_zab_serv.yml
@@ -1,15 +1,17 @@
 -
-  hosts: server
+  hosts: localhost
   become: true
   roles:
     - zabbix_server
     - zabbix-web
 
   vars:
-    zabbix_server_version: "5.2"
+    zabbix_server_version_deb: http://repo.zabbix.com/zabbix/6.4/ubuntu/pool/main/z/zabbix-release/zabbix-release_latest+ubuntu20.04_all.deb
     zabbix_database_type: mysql
     zabbix_database_host: localhost
-    zabbix_database_port: ""
     zabbix_database_name: zabbixdb
     zabbix_database_user: zabbixuser
+    zabbix_database_port: 5432
     zabbix_database_password: 123456
+    zabbix_database_schema: public
+    php_timezone: Europe/Moscow
