--- a/ansible/install_zab_serv.yml
+++ b/ansible/install_zab_serv.yml
@@ -6,7 +6,7 @@
     - zabbix-web
 
   vars:
-    zabbix_server_version_deb: http://repo.zabbix.com/zabbix/6.4/ubuntu/pool/main/z/zabbix-release/zabbix-release_latest+ubuntu20.04_all.deb
+    zabbix_server_version_deb: https://repo.zabbix.com/zabbix/6.0/ubuntu/pool/main/z/zabbix-release/zabbix-release_6.0-4+ubuntu20.04_all.deb
     zabbix_database_type: mysql
     zabbix_database_host: localhost
     zabbix_database_name: zabbixdb
